Added new functionality